--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-195884239-3"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-
-
-        	<!-- Global site tag (gtag.js) - Google Analytics
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171620673-1"></script>
-	<script>
- 	 window.dataLayer = window.dataLayer || [];
- 	 function gtag(){dataLayer.push(arguments);}
- 	 gtag('js', new Date());
-
- 	 gtag('config', 'UA-171620673-1');
-    </script> -->
-    
+        gtag('config', 'UA-195884239-3');
+        </script>
     
         <!-- Required meta tags -->
         <meta charset="utf-8">
