--- a/index.html
+++ b/index.html
@@ -1,124 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
-    <!--///////////////////////////// Header ////////////////////////////////////-->
-    <head>
-        <!-- google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-195884239-3"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-195884239-3');
-        </script>
+<html class="no-js" lang="en">
+
+<head>
+    <!-- google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-195884239-3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-195884239-3');
+    </script>
  
-    
-        <!-- meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/title3.png" type="image/png">
-        <title>Simon Song</title>
-        <!-- main css -->
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Simon Song</title>
+	<link rel="icon" href="images/title2.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
 
+<body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
 
-    <!--///////////////////////////// grid view of projects ////////////////////////////////////-->
-    <body>
-        <div class = "layout_grid">
-            <div class = "gallery">
-                <h1 class = "gp">Gallery</h1>
-                <div class = "column">
-                    <div class="project1">
-                        <div class = 'img_size'>
-                            <img src="img/taxi_all.gif" alt="NYC taxi App">
-                        </div>
-                        <div class="project_details">
-                            <h2>Taxi App with R Shiny</h2>
-                            <p>NYC taxi App provides taxi traffic visualization and taxi services like display shortest routes and calculate taxi cost, drive distance etc.</p>
-                            <p class = "button_block">
-                                <a href="https://github.com/Shutong-Song/NYC-taxi-Shiny-App" class="white_bg_btn" target = "_blank">View More</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project2">
-                        <div class = 'img_size'>
-                            <img src="img/bluebike.gif" alt="NYC taxi App">
-                        </div>
-                        <div class="project_details">
-                            <h2>Bike rental with Python Dash</h2>
-                            <p>Bike rental App support station search inside a radius, station traffic on mouse hover, find shortest routes between stations etc.</p>
-                            <p class = "button_block">
-                                <a href="https://github.com/Shutong-Song/Bike-rental-App" class="white_bg_btn" target = "_blank">View More</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project3">
-                        <div class = 'img_size'>
-                            <img src="img/client_server.gif" alt="NYC taxi App">
-                        </div>
-                        <div class="project_details">
-                            <h2>Group chat App with Java swing</h2>
-                            <p>Group chat App utilizes TCP client-server framework, which supports easy user interface connect/disconnect, multi-users chatting, system messages, and etc. Maintained message synchronization and concurrency controls.</p>
-                            <p class = "button_block">
-                                <a href="https://github.com/Shutong-Song/Group-Chat-App" class="white_bg_btn" target = "_blank">View More</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="project4">
-                        <div class = 'img_size'>
-                            <img src="img/db.gif" alt="NYC taxi App">
-                        </div>
-                        <div class="project_details">
-                            <h2>Database management system with C++</h2>
-                            <p>menu-driven database system is written in pure C++, support basic functions like create tables, insert records, display tables and meta data management</p>
-                            <p class = "button_block">
-                                <a href="https://github.com/Shutong-Song/menu_driven-database" class="white_bg_btn" target = "_blank">View More</a>
-                            </p>
-                        </div>
-                    </div>
-                    </div>
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Simon Song</h1>
+            <h2>Data Scientist</h2>
+        </div>
+        <!-- End #lead-content -->
+
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        I am a graudate student at University of Pittsburgh.
+                        My Study focuses on Data Science, Machine Learning, and Statistics.
+                        Fields that I worked on:
+                    </p>
+                    <p>
+                        <p>1. Social network analysis and Geospatial network analysis, tools(Python-networkx, R-tidygraph-ggraph) </p>
+                        <p>2. Natural language process for top modeling and sentiment analysis, tools(Python-nltk-gensim-transformers)</p>
+                        <p>3. Image classification, tools(Python-opencv-pytorch)</p>
+                    </p>
                 </div>
             </div>
-            <!--/////////////////////////side bar /////////////////////////////////////////-->
-            <div class = "right_sidebar">
-                <aside class="author_widget">
-                    <div class = "circular_image">
-                        <img class="author_img" src="img/me1.png" alt="">
+        </div>
+    </div>
+    <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="9/2021 – 12/2021">
+                <h3>Seagate</h3>
+                <h4>Data science and software Intern</h4>
+                <p>
+                    Build NLP pipeline using Python transfoermer models; automated processing pipeline from Dash App to Onedrive data source access.
+                </p>
+            </div>
+
+            <div data-date="1/2021 – 8/2021">
+                <h3>University of Pittsburgh</h3>
+                <h4>Research and assessment Intern</h4>
+                <p>
+                    Analyze of users' professional network using Python networkx.
+                </p>
+            </div>
+
+        </div>
+    </div>
+    <!-- End #experience -->
+
+    <div id="projects" class="background-alt">
+        <h2 class="heading">Projects</h2>
+        <div class="container">
+            <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/nyc_small.png"/>
                     </div>
-                    <h4>Simon Song</h4>
-                    <div class="social_icon">
-                        <a href = "https://github.com/Shutong-Song" target = "_blank">
-                            <img class = "git" src = "img/git.png">
-                        </a>
-                        <a href = "https://www.linkedin.com/in/shutong-song-516bb1202/" target = "_blank">
-                            <img class = "linkedin" src = "img/Linkedin.png">
-                        </a>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>NYC taxi App using R Shiny</h3>
+                        <p>
+                            NYC taxi App provides taxi traffic visualization and taxi services like display shortest routes and calculate taxi cost, drive distance etc.
+                        </p>
+                        <a href="https://github.com/Shutong-Song/NYC-taxi-Shiny-App" target = "_blank">View Project</a>
                     </div>
-                    <p>Text mining and NLP, Time-series forecasting, Computer Vision with Deep learning, statistical inference.</p>
-                    <div class="br"></div>
-                </aside>
-                <aside class = "author_widget" >
-                    <h3 class="widget_title">Working Experience</h3>
-                    <p>09/2021 - 12/2021 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Seagate</p>
-                    <p>Data science and software intern</p>
-                    <p>01/2021 - 08/2021 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pitt</p>
-                    <p>Assessment and research intern</p>
-                    <div class="br"></div>
-                    <h3 class="widget_title">Ongoing Projects</h3>
-                    <p class = "intro_section">Receipt digitizing</p>
-                    <h3 class="widget_title">Skills</h3>
-                    <div class = "inline_icon">
-                        <ul class="list">
-                            <li><img src = "https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" width = 30></li>
-                            <li><img src = "https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/r/r.png" width = 30></li>
-                            <li><img src = "https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/cpp/cpp.png" width = 25></li>
-                            <li><img src = "https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png" width = 50></li>
-                            <li><img src = "https://raw.githubusercontent.com/jmnote/z-icons/master/svg/java.svg" width = 30></li>
-                            <li><img src = "https://cdn.jsdelivr.net/npm/programming-languages-logos/src/javascript/javascript.png" width = 30></li>
-                        </ul>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/bluebike_small.png" />
                     </div>
-                </aside>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Bike rental with Python Dash</h3>
+                        <p>
+                            Bike rental App support station search inside a radius, station traffic on mouse hover, find shortest routes between stations etc.
+                        </p>
+                        <a href="https://github.com/Shutong-Song/Bike-rental-App" target = "_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/group_chat_small.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Group chat App with Java Swing</h3>
+                        <p>
+                            Group chat App utilizes TCP client-server framework, which supports easy user interface connect/disconnect, multi-users chatting, system messages, and etc. Maintained message synchronization and concurrency controls.
+                        </p>
+                        <a href="https://github.com/Shutong-Song/Group-Chat-App" target = "_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/cpp_database_small.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Database management system with C++</h3>
+                        <p>
+                            menu-driven database system is written in pure C++, support basic functions like create tables, insert records, display tables and meta data management.
+                        </p>
+                        <a href="https://github.com/Shutong-Song/menu_driven-database" target = "_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
             </div>
         </div>
-    </body>
+    </div>
+    <!-- End #projects -->
+
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>R</li>
+            <li>MySQL</li>
+            <li>C++</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>C</li>
+            <li>Docker</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
+</body>
+
 </html>
