--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     <!-- End #skills -->
 
     <footer>
+        <!--
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 social">
@@ -218,7 +219,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> --
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
