--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 <div class="col-md-8">
                     <p>
                         I am a graudate student at University of Pittsburgh.
-                        My Study focuses on Data Science, Machine Learning, and Statistics.
+                        My study focuses on Data Science, Machine Learning, and Statistics.
                         Fields that I worked on:
                     </p>
                     <p>
-                        <p>1. Social network analysis and Geospatial network analysis, tools(Python-networkx, R-tidygraph-ggraph) </p>
-                        <p>2. Natural language process for top modeling and sentiment analysis, tools(Python-nltk-gensim-transformers)</p>
-                        <p>3. Image classification, tools(Python-opencv-pytorch)</p>
+                        <p>1. Social network analysis and Geospatial network analysis tools(Python-networkx, R-tidygraph-ggraph) </p>
+                        <p>2. Natural language process for top modeling and sentiment analysis tools(Python-nltk-gensim-transformers)</p>
+                        <p>3. Image classification tools(Python-opencv-pytorch)</p>
                     </p>
                 </div>
             </div>
@@ -88,7 +88,10 @@
                 <h3>Seagate</h3>
                 <h4>Data science and software Intern</h4>
                 <p>
-                    Build NLP pipeline using Python transfoermer models; automated processing pipeline from Dash App to Onedrive data source access.
+                    Automated data preprocessing pipeline from data source accessing in Onedrive (via Microsoft Graph API), language preprocessing to live update on Dash App.
+                </p>
+                <p>
+                    Tested and deployed NLP applications using Docker and DVC(data version control).
                 </p>
             </div>
 
@@ -96,7 +99,13 @@
                 <h3>University of Pittsburgh</h3>
                 <h4>Research and assessment Intern</h4>
                 <p>
-                    Analyze of users' professional network using Python networkx.
+                    Analyzed of users' professional network using Python networkx and R (tidygraph and ggraph).
+                </p>
+                <p>
+                    Experimented personalized email campaign based on users' profile and activity and perfomed A/B testing and ANOVA.
+                </p>
+                <p>
+                    Queried data from various sources and built KPI dashboards using Python and Tableau.
                 </p>
             </div>
 
@@ -187,6 +196,8 @@
             <li>JavaScript</li>
             <li>C</li>
             <li>Docker</li>
+            <li>DVC</li>
+            <li>Vim</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -219,7 +230,7 @@
                 </div>
             </div>
         </div>
-    </footer> --
+    </footer> -->
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
