--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 <h3>Seagate</h3>
                 <h4>Data science and software Intern</h4>
                 <p>
-                    Automated data preprocessing pipeline from data source accessing in Onedrive (via Microsoft Graph API), language preprocessing to live update on Dash App.
+                    Automated data preprocessing pipeline from data source accessing in Onedrive (via Microsoft Graph API), text mining and preprocessing to live update on Dash App.
                 </p>
                 <p>
-                    Tested and deployed NLP applications using Docker and DVC(data version control).
+                    Tested and deployed natural language processing(NLP) applications using Docker and DVC(data version control).
                 </p>
             </div>
 
