--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="./blog/alg.html" target="_blank">
+              <a href="./blog/stackqueue.html" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/algo.png" alt="Algorithms" loading="lazy">
