--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/title.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/desk.svg" type="image/x-icon">
 
   <!--
     - custom css link
@@ -56,7 +56,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Simon Song</h1>
+          <h1 class="name" title="Simon Song">Simon Song</h1>
 
           <p class="title">Machine Learning Engineer</p>
         </div>
@@ -447,7 +447,7 @@
                 <div class="blog-content">
 
                   <div class="blog-meta">
-                    <p class="blog-category">Algorithms</p>
+                    <p class="blog-category">data structure</p>
 
                     <span class="dot"></span>
 
