--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Machine learning</button>
             </li>
 
           </ul>
@@ -390,7 +390,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Machine learning</button>
               </li>
 
             </ul>
@@ -407,7 +407,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/geospatial.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/geospatial.png" alt="geo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Taxi app with Shiny</h3>
@@ -419,6 +419,71 @@
 
           </ul>
 
+          <ul class="project-list">
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Shutong-Song/Group-Chat-App" target = "_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/chatapp.png" alt="app" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Group chat application with Java swing</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+          </ul>
+
+          <ul class="project-list">
+
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Shutong-Song/menu_driven-database" target = "_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/book.png" alt="app" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Book library checkout system with C++</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+          </ul>
+
+          <ul class="project-list">
+
+            <li class="project-item  active" data-filter-item data-category="geospatial analysis">
+              <a href="https://github.com/Shutong-Song/Bike-rental-App" target = "_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/bikerental.png" alt="app" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Bike rental app with Python Dash</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
+          </ul>
         </section>
 
       </article>
