feat: disable blog, link to heroku

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">website</p>
+              <p class="contact-title">portfolio</p>
 
-              <a href="https://shutong-song.github.io/" class="contact-link">https://shutong-song.github.io/</a>
+              <a href="https://shutong-song.github.io/" class="contact-link">https://data-orchestration-tool-c81a9d3257c1.herokuapp.com/</a>
             </div>
 
           </li>
@@ -492,6 +492,8 @@
 
 
 
+      <!--
+        - #blog disable
       <article class="blog" data-page="blog">
 
         <header>
@@ -563,7 +565,7 @@
         </section>
 
       </article>
-
+      -->
 
 
 
